--- a/projekt-20-literatura-bibliography.bib
+++ b/projekt-20-literatura-bibliography.bib
@@ -41,7 +41,7 @@
 }
 
 @webpage{xdg,
-	Key 			= "xdg",
+	key 			= "xdg",
 	title 			= "xdg-utils",
 	howpublished	= "online",
 	year 			= "2019",
@@ -62,8 +62,8 @@
   cited 		= "2021-04-25"
 }
 
-@webpage{Keyring,
-	Key 			= "keyring",
+@webpage{keyring,
+	key 			= "keyring",
 	title 			= "What is: Linux keyring, gnome-keyring, Secret Service, and D-Bus",
 	howpublished	= "online",
 	year 			= "2019",
@@ -74,18 +74,8 @@
 	cited 			= "2021-05-02"
 }
 
-@webpage{Microsoft365,
-	Key 			= "Microsoft",
-	title 			= "Microsoft 365",
-	howpublished	= "online",
-	year 			= "2021",	
-	url 			= "https://www.microsoft.com/en-us/microsoft-365/onedrive/online-cloud-storage/",
-	publisher		= "Microsoft",
-	cited 			= "2021-04-021"
-}
-
 @webpage{Dropbox,
-	Key 			= "Dropbox",
+	key 			= "Dropbox",
 	title 			= "Dropbox",
 	howpublished	= "online",
 	year 			= "2021",	
@@ -95,7 +85,7 @@
 }
 
 @webpage{GoogleWorkspace,
-	Key 			= "GoogleWorkspace",
+	key 			= "GoogleWorkspace",
 	title 			= "Google Workspace",
 	howpublished	= "online",
 	year 			= "2021",	
@@ -105,7 +95,7 @@
 }
 
 @webpage{GoogleFileStream,
-	Key 			= "DeployGoogleDriveForDesktop",
+	key 			= "DeployGoogleDriveForDesktop",
 	title 			= "Deploy Google Drive for desktop",
 	howpublished	= "online",
 	year 			= "2021",	
@@ -115,12 +105,32 @@
 }
 
 @webpage{GoogleAPIReference,
-	Key 			= "GoogleDriveForDevelopersAPIReference",
+	key 			= "GoogleDriveForDevelopersAPIReference",
 	title 			= "Google Drive for developers - API Reference",
 	howpublished	= "online",
 	year 			= "2021",	
 	url 			= "https://developers.google.com/drive/api/v3/reference",
 	publisher		= "Google",
+	cited 			= "2021-04-21"
+}
+
+@webpage{pCloud,
+	key 			= "pCloud",
+	title 			= "pCloud",
+	howpublished	= "online",
+	year 			= "2021",	
+	url 			= "https://www.pcloud.com/eu",
+	publisher		= "pCloud",
+	cited 			= "2021-04-21"
+}
+
+@webpage{Syncthing,
+	key 			= "Syncthing",
+	title 			= "Syncthing",
+	howpublished	= "online",
+	year 			= "2021",	
+	url 			= "https://syncthing.net/",
+	publisher		= "Syncthing",
 	cited 			= "2021-04-21"
 }
 
