--- a/projekt-30-prilohy-appendices.tex
+++ b/projekt-30-prilohy-appendices.tex
@@ -1,2 +1,2 @@
-\chapter{Dokumentace projektu Validované datové uložiště}
+% \chapter{Dokumentace projektu Validované datové uložiště}
 \chapter{Obsah přiloženého média}
